# smashgg-elo

./: Cargo.toml  LICENSE  README.md
src/: elo.rs  json.rs  lib.rs  main.rs  reqwest_client.rs  reqwest_wrapper.rs  rusqlite_wrapper.rs
src/query/: entrant_info_query.graphql  entrant_page_query.graphql  sets_info_query.graphql  sets_page_query.graphql  tourney_event_query.graphql
