[package]
name = "smashgg_elo"
version = "1.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4" }
reqwest = { version = "0.11", features = ["blocking", "json"] }
rusqlite = { version = "0.27.0", features = ["bundled", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
